# mkrepo

./: .editorconfig  .gitignore  README.md  pyproject.toml
docs/: draft_0.md
src/: default_userconfig.toml
src/cli/: core.py  logger.py  main.py  utils.py
src/templates/: python.toml  python_advanced.toml
