[tool.poetry]
name = "mkrepo"
version = "0.1.0"
description = "Initialize a repository from a template."
authors = ["Benjamín Vicente <benjavicente@uc.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
mkrepo = "mkrepo.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^9.10.0"
toml = "^0.10.2"
pylint = "^2.6.2"
Jinja2 = "^2.11.3"
mypy = "*"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
typer-cli = "^0.0.11"
black = "^20.8b1"
pylint = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 100
